--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodebb-plugin-shoutbox-cabane-libre",
+  "name": "nodebb-plugin-shoutbox",
   "version": "0.3.15",
   "description": "NodeBB Shoutbox Plugin",
   "main": "library.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/TheWorms/nodebb-plugin-shoutbox-cabane-libre"
+    "url": "https://github.com/seyon/nodebb-plugin-shoutbox"
   },
   "keywords": [
     "nodebb",
@@ -25,6 +25,11 @@
       "name": "The Worm's",
       "email": "theworms@theworms.fr",
       "url": "https://github.com/TheWorms"
+    },
+    {
+      "name": "Seyon",
+      "email": "christianwielath@gmail.com",
+      "url": "https://github.com/seyon"
     }
   ],
   "dependencies": {
