--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodebb-plugin-shoutbox",
+  "name": "nodebb-plugin-shoutbox-seyon",
   "version": "0.3.15",
   "description": "NodeBB Shoutbox Plugin",
   "main": "library.js",
